feat: add isVerified field and change rating to float
