# storage/api-docs/api-docs.json
@@ -1357,13 +1357,7 @@
                             }
                         }
                     }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    },
-                    {}
-                ]
+                }
             }
         },
         "/api/orders/{id}": {
@@ -2408,12 +2402,17 @@
                                                         "example": 1
                                                     },
                                                     "rating": {
-                                                        "type": "integer",
+                                                        "type": "number",
+                                                        "format": "float",
                                                         "example": 5
                                                     },
                                                     "comment": {
                                                         "type": "string",
                                                         "example": "Great product"
+                                                    },
+                                                    "isVerified": {
+                                                        "type": "boolean",
+                                                        "example": true
                                                     },
                                                     "created_at": {
                                                         "type": "string",
@@ -2494,7 +2493,8 @@
                                 ],
                                 "properties": {
                                     "rating": {
-                                        "type": "integer",
+                                        "type": "number",
+                                        "format": "float",
                                         "maximum": 5,
                                         "minimum": 1,
                                         "example": 5
@@ -2512,7 +2512,59 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "Review created successfully"
+                        "description": "Review created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Review created successfully"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "comment": {
+                                                    "type": "string",
+                                                    "example": "Great product"
+                                                },
+                                                "isVerified": {
+                                                    "type": "boolean",
+                                                    "example": false
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "example": "2026-03-18"
+                                                },
+                                                "rating": {
+                                                    "type": "number",
+                                                    "format": "float",
+                                                    "example": 5
+                                                },
+                                                "user": {
+                                                    "properties": {
+                                                        "name": {
+                                                            "type": "string",
+                                                            "example": "Guest"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "404": {
                         "description": "Product not found"
